Bug 1166066 - Fix opening new windows from a private window. r=jdm a=sylvestre