embedding/components/windowwatcher/nsWindowWatcher.cpp
@@ -1410,14 +1410,23 @@ uint32_t nsWindowWatcher::CalculateChromeFlags(nsIDOMWindow *aParent,
                                                bool aHasChromeParent,
                                                bool aOpenedFromRemoteTab)
 {
-   if(!aFeaturesSpecified || !aFeatures) {
-      if(aDialog)
-         return nsIWebBrowserChrome::CHROME_ALL | 
-                nsIWebBrowserChrome::CHROME_OPENAS_DIALOG | 
-                nsIWebBrowserChrome::CHROME_OPENAS_CHROME;
-      else
-         return nsIWebBrowserChrome::CHROME_ALL;
-   }
+  uint32_t chromeFlags = 0;
+  bool isCallerChrome =
+    nsContentUtils::IsCallerChrome() && !aOpenedFromRemoteTab;
+
+  bool onlyPrivateFlag = aFeaturesSpecified && aFeatures && isCallerChrome &&
+    nsCRT::strcasecmp(aFeatures, "private") == 0;
+  if (!aFeaturesSpecified || !aFeatures || onlyPrivateFlag) {
+    chromeFlags = nsIWebBrowserChrome::CHROME_ALL;
+    if (aDialog) {
+      chromeFlags |= nsIWebBrowserChrome::CHROME_OPENAS_DIALOG |
+                     nsIWebBrowserChrome::CHROME_OPENAS_CHROME;
+    }
+    if (onlyPrivateFlag) {
+      chromeFlags |= nsIWebBrowserChrome::CHROME_PRIVATE_WINDOW;
+    }
+    return chromeFlags;
+  }
 
   /* This function has become complicated since browser windows and
      dialogs diverged. The difference is, browser windows assume all
@@ -1427,7 +1436,6 @@ uint32_t nsWindowWatcher::CalculateChromeFlags(nsIDOMWindow *aParent,
      "OS's choice," and also support an "all" flag explicitly disallowed
      in the standards-compliant window.(normal)open. */
 
-  uint32_t chromeFlags = 0;
   bool presenceFlag = false;
 
   chromeFlags = nsIWebBrowserChrome::CHROME_WINDOW_BORDERS;
@@ -1435,8 +1443,6 @@ uint32_t nsWindowWatcher::CalculateChromeFlags(nsIDOMWindow *aParent,
     chromeFlags = nsIWebBrowserChrome::CHROME_ALL;
 
   /* Next, allow explicitly named options to override the initial settings */
-
-  bool isCallerChrome = nsContentUtils::IsCallerChrome() && !aOpenedFromRemoteTab;
 
   // Determine whether the window is a private browsing window
   if (isCallerChrome) {
